# spirv-example

./: CMakeLists.txt  README.md
cmake/: spirv_helper.cmake
color/: CMakeLists.txt  main.cpp  shader.frag  shader.vert
ubo/: CMakeLists.txt  main.cpp  shader.frag
uniform/: CMakeLists.txt  main.cpp  shader.frag  shader.vert
